# musical-mcp

./: .coverage  .dockerignore  CLAUDE.md  Dockerfile  Makefile  pyproject.toml
scripts/: D  musical-mcp  playme
src/: main.py  scales.py
tests/: __init__.py  conftest.py  test_main.py
